# humble-clay

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.md
.cursor/: SPECS.md  TASKS.md
.cursor/learnings/: LEARN-2024-03-28-01.md  LEARN-2024-03-28-02.md  LEARN-2024-03-28-03.md
.cursor/rules/: apps-script-constraints-rule.mdc  dependency-management-rule.mdc  development-workflow-rule.mdc  python-design-patterns.mdc  python-documentation.mdc  python-performance.mdc  python-security.mdc  python-style.mdc  python-testing.mdc  simplicity-first-rule.mdc  terminal-command-prefix-rule.mdc  test-driven-development-rule.mdc  visualization-rule.mdc
.cursor/tasks/: TASK-2023-06-15-01-prompt-input-field.md  TASK-2023-07-11-01.md  TASK-2024-03-28-01.md  TASK-2024-03-XX-04.md  TASK-2024-03-XX-05.md  TASK-2024-03-XX-06.md  TASK-2024-03-XX-07.md  TASK-2024-03-XX-07a.md  TASK-2024-03-XX-08.md  TASK-2024-04-01-01.md  TASK-2024-04-01-02-structured-extraction.md  TASK-2025-04-02-01-SimpleOutputField.md  TASK-2025-04-03-01-prompt-input-field.md  TASK-2025-04-07-01-refactor-main.md  TASK-2025-04-07-02-concurrent-batch-processing.md
.github/workflows/: test.yml
api/: auth.py  main.py
api/batch/: processor.py
api/core/: dependencies.py  lifespan.py
api/llm/: processor.py
api/logging/: __init__.py
api/response/: __init__.py
api/routes/: general.py  prompts.py
api/schema/: __init__.py  dynamic.py
api/tests/: conftest.py  (+11 more)
apps_script/: .eslintrc.json  README.md  jest.config.js  package-lock.json
scripts/: generate_api_key.py
tests/: test_api.py
(+70 files in other folders)
