[project]
name = "humble-clay"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
description = "A Humble API version of Clay's AI Agent for Google Sheets Apps Script."
authors = [
    { name = "Jonatan" }
]
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "prefect>=3.2.14",
    "pydantic>=2.10.6",
    "pydantic-ai>=0.0.46",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.26.0",
    "python-dotenv>=1.1.0",
    "ruff>=0.9.7",
    "uvicorn>=0.34.0",
]

[tool.ruff]
# Basic settings
line-length = 88
target-version = "py312"

# Essential rules for your current codebase
[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
]

# Directories to ignore
exclude = [
    ".git",
    ".venv",
    "__pycache__",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
markers = [
    "llm: marks tests as LLM-based (deselect with '-m \"not llm\"')",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
